--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://squidfunk.github.io/mkdocs-material/schema.json
 
-site_name: EasyAuth Docs
+site_name: Docs
 theme:
   name: material
   features:
@@ -27,6 +27,9 @@ theme:
       accent: lime
   logo: assets/easyauthlogolight_small.png
   favicon: assets/favicon.png
+  font:
+    text: Ubuntu
+
 
 extra:
   homepage: https://easyauth.io
@@ -52,6 +55,8 @@ markdown_extensions:
   - footnotes
   - pymdownx.details
   - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true 
   - pymdownx.mark
   - attr_list
   - md_in_html
