added Svelte/SvelteKit documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ theme:
       toggle:
         icon: material/toggle-switch-off-outline 
         name: Switch to dark mode
+      primary: deep purple
     - scheme: slate 
       toggle:
         icon: material/toggle-switch
